added kafka producer and consumer. Also adding the response helper JS.
