# api/swagger/swagger.yaml
@@ -1,7 +1,7 @@
 swagger: "2.0"
 info:
   version: "0.0.1"
-  title: Hello World App
+  title: Sensity Interface Service
 # during dev, should point to your local machine
 host: localhost:10010
 # basePath prefixes all resource paths 
@@ -42,6 +42,44 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+
+    # Get a specific policy category
+  /customers/{orgid}/sites/{siteid}/policycategories/{policycategoryid}:
+    x-swagger-router-controller: policy_category
+    get:
+      description: Get a specific policy category in a site
+      operationId: getPolicyCategory
+      parameters:
+        - name: orgid
+          in: path
+          description: The org ID
+          required: true
+          type: string
+        - name: siteid
+          in: path
+          description: The site ID
+          required: true
+          type: string
+        - name: policycategoryid
+          in: path
+          description: The policy category ID
+          required: true
+          type: string        
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/GetPolicyCategoryResponse"
+        "404":
+          description: Policy Category Not Found
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
@@ -52,6 +90,10 @@ definitions:
     properties:
       message:
         type: string
+
+  GetPolicyCategoryResponse:
+    type: object    
+
   ErrorResponse:
     required:
       - message
